--- a/index.html
+++ b/index.html
@@ -2,16 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Color Changer</title>
+  <title>Simple Todo App</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="app">
-    <h1>Color Changer</h1>
-    <input id="color-input" type="text" placeholder="Enter color (e.g. #ff0000)">
-    <button id="apply-btn">Apply Color</button>
-    <div id="box"></div>
+  <div class="todo-app">
+    <h1>Todo List</h1>
+    <input id="task-input" type="text" placeholder="Enter new task">
+    <button id="add-btn">Add</button>
+    <button id="clear-completed-btn">Clear Completed</button>
+    <ul id="task-list"></ul>
   </div>
+  <div></div>
+  <div></div>
   <script src="script.js"></script>
 </body>
 </html>
